# axum-tera-personal-blog

./: .env  Cargo.toml  TODO.md  diesel.toml
database/: database_conceptual_schema.drawio  database_conceptual_schema.html
database/sqlite/: database.db
migrations/2025-02-19-123233_create_posts/: up.sql
migrations/2025-03-17-230115_create_business_inquiries/: down.sql  up.sql
migrations/2025-03-18-130843_comments/: up.sql
migrations/2025-03-18-132623_create_thumbnails/: down.sql  up.sql
migrations/2025-03-18-135517_initial/: down.sql  up.sql
posts/: blog1.md  blog10.md  blog11.md  blog12.md  blog2.md  blog3.md
src/: cli.rs  database.rs  html_insertion.rs  main.rs  posts.rs  request.rs  visitor.rs
src/database/: models.rs  schema.rs
static/: styling.css
templates/: base.html  blog_form.html  blogs.html  contact.html  error.html  header.html  index.html  notfound.html
