[package]
name = "my-website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tera ="1.0"
lazy_static = "1.5"
tokio = { version = "1", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
comrak = "0.35"
tower-http = {version= "0.6.2", features = ["fs"]}
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
